tests/files/lexer_tests/should_fail/045.cmdr
// Illegal character in variable name (ascii 12)
myvar = 12;